# RAG-Vergleich

./: .gitignore  docker-compose.yaml
Graph-RAG/: .env  Dockerfile  data.txt  gesamt.py  main.py  requirements.txt  supervisor.conf
Graph-RAG/config/: settings.py
Graph-RAG/graph/: create_index.py  graph_builder.py  neo4j_connector.py  vectorstore_builder.py
Graph-RAG/rag/: rag_chain.py  retriever.py  schemas.py
Graph-RAG/temp/: enhancing_rag_with_graph.ipynb
Graphh-Rag/: Dockerfile  config.py  main.py
Graphh-Rag/embeddings/: embedding_model.py  vector_retriever.py
Graphh-Rag/graphdb/: create_index.py  graph_retriever.py
Graphh-Rag/ingestion/: graph_tranform.py  load_documents.py  split_documents.py
Graphh-Rag/llm/: answer_chain.py  entity_extraction.py  llm_setup.py
Graphh-Rag/neo4j/: Dockerfile
Graphh-Rag/utils/: full_text_query.py
Hybrid-RAG/: .env  dummytext.txt  graph_rag.ipynb  main.py
Hybrid-RAG/config/: settings.py
Hybrid-RAG/graph/: graph_builder.py  neo4j_connector.py
Hybrid-RAG/rag/: rag_chain.py  schemas.py
Vektor-RAG/server/: .devcontainer.json  .dockerignore  Dockerfile  build.sh  pyproject.toml  run.sh
Vektor-RAG/server/src/core/: __init__.py  __main__.py  document.py  exceptions.py  rag_service.py  schemas.py
Vektor-RAG/server/src/core/embedders/: __init__.py  azure_openai_embedder.py  base_embedder.py  sentence_transformer_embedder.py
Vektor-RAG/server/src/core/vector_stores/: __init__.py  base_vector_store.py  chroma_vector_store.py
Vektor-RAG/server/src/examples/: __init__.py  dragon_management_server.py  seeder.py
(+3 files in other folders)
